# LR6

Task_1/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Task1  Task_1.cpp  cmake_install.cmake  functions.cpp  main[1]_include.cmake  test  test.cpp
Task_1/GTEST/: CTestTestfile.cmake
Task_2/: CMakeLists.txt  Task_2.cpp  functions.cpp  test  test.cpp
Task_3/: CMakeLists.txt  Task_3.cpp  functions.cpp  test  test.cpp
